--- a/index.html
+++ b/index.html
@@ -568,13 +568,8 @@
             <div class="text-center text-gray-400 text-sm">
                 <p>&copy; 2025 Tarasso Coffee. All rights reserved. Dibuat dengan ❤️ di Bogor.</p>
                 <p class="mt-2">
-                    Web Design by Abrar Kota Bogor 
-                    <a href="https://id.linkedin.com/in/mokhamadabrar" 
-                       target="_blank" 
-                       rel="noopener noreferrer" 
-                       class="font-semibold text-gray-300 hover:text-white underline">
-                        link
-                    </a>
+                    Web Design by <a href="https://id.linkedin.com/in/mokhamadabrar" target="_blank" 
+                       rel="noopener noreferrer" class="font-semibold text-gray-300 hover:text-white underline">Abrar</a> Kota Bogor
                 </p>
             </div>
         </div>
