--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             </button>
             
             <h3 class="text-2xl font-bold text-tarasso-brown mb-4">Scan untuk Membayar</h3>
-            <img src="https://mokhamadabrar.github.io/sciencepark/img/terasso-qris.webp" 
+            <img src="/img/terasso-qris.webp" 
                  alt="QRIS Pembayaran Tarasso Coffee" 
                  class="w-full h-auto rounded-lg border-4 border-tarasso-green"
                  onerror="this.src='https://placehold.co/400x400/2A4A42/FFFFFF?text=QRIS+Error'">
