--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="Tarasso Coffee, Kopi Asli Nusantara, kedai kopi bogor, kopi lokal, kopi botolan, drip coffee, espresso pouch, kopi aren, menu tarasso coffee">
     <meta name="author" content="Tarasso Coffee">
     
+    <!-- SEO Meta Google -->
+    <meta name="google-site-verification" content="zPrQ9CfMj9UvttktFCVMu4Cm2jrvX5Pql29368qu4y4" />
+    
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Tarasso Coffee - Kopi Asli Nusantara" />
     <meta property="og:description" content="Nikmati rasa kopi terbaik dari Tarasso Coffee, kedai kopi lokal asli Bogor. Kami menyajikan kopi botolan, drip coffee, dan espresso pouch berkualitas." />
