--- a/index.html
+++ b/index.html
@@ -607,16 +607,7 @@
 
                     <!-- Peta -->
                     <div class="lg:col-span-2 bg-white rounded-2xl shadow-lg p-4">
-                        <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.120519504812!2d106.7969939!3d-6.5428654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c3452a9c02e1%3A0x3c508c00d45e2db7!2sTarasso%20Coffee!5e0!3m2!1sen!2sid!4v1730872517849!5m2!1sen!2sid" 
-                            width="100%" 
-                            height="100%" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy" 
-                            referrerpolicy="no-referrer-when-downgrade"
-                            class="rounded-lg min-h-[450px]">
-                        </iframe>
+                        <iframe title="Peta Lokasi Tarasso Coffee" src="https://www.google.com/maps/embed/..." width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="rounded-lg min-h-[450px]"></iframe>
                     </div>
                 </div>
             </div>
