--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarasso Coffee - Kopi Asli Nusantara</title>
 
+    <!-- Meta refresh sebagai fallback -->
+    <meta http-equiv="refresh" content="0; url=https://tarassocoffee.pages.dev/">
+    <!-- Optional: jangan diindex lagi, biar fokus ke domain baru -->
+    <meta name="robots" content="noindex">
+    <script>
+        // Redirect cepat via JavaScript
+        (function() {
+        var target = "https://tarassocoffee.pages.dev/";
+        // Kalau mau ikutkan query string & hash:
+        target += window.location.search + window.location.hash;
+        window.location.replace(target);
+        })();
+      </script>
+ 
     <link rel="icon" type="image/x-icon" href="/img/tarasso2.ico" />
     <!-- SEO Meta Tags -->
     <meta name="description" content="Nikmati rasa Tarasso Coffee - Kopi Asli Nusantara terbaik dari Tarasso Coffee, kedai kopi lokal asli Bogor. Kami menyajikan kopi botolan, drip coffee, dan espresso pouch berkualitas.">
